--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -7,7 +7,6 @@ body,html{
 	font-size: 14px;
 	font-family: Tahoma, serif;
 	cursor: default;
-	overflow: hidden;
 }
 
 .left_bar{
@@ -50,7 +49,7 @@ body,html{
 	margin: 10px auto;
 	padding: 10px 29px;
 	font-family: Pacifico, serif;
-	font-size: 48px;
+	font-size: 36px;
 	color: white;
 }
 
@@ -73,7 +72,7 @@ li.menu-list-item{
 	display: inline-block;
 	width: 100%;
 	height: 60px;
-	color: #7f8c8d;
+	color: #4285f4;
 	padding-left: 20px;
 	padding-top: 15px;
 	font-size: 20px;
@@ -83,7 +82,7 @@ li.menu-list-item{
 li.menu-list-item a{
 	text-decoration: none;
 	cursor: pointer;
-	color: #7f8c8d;
+	color: #4285f4;
 }
 
 
@@ -100,24 +99,25 @@ li.menu-list-item a:hover{
 	display: inline-block;
 }
 
-.my-profile-image{
-	position: absolute;
-	left: 20px;
-	top: 25px;
-	display: inline-block;	
-}
 
-.my-profile-image img{
+.profile-image img,
+.image{
+	display: inline-block;
 	width: 50px;
 	height: 50px;
-}
-
-.profile-image img{
-	width: 50px;
-	height: 50px;
-	border: 0 solid #7f8c8d;
+	border: 0 solid #4285f4;
 	border-radius: 3px;
 	cursor: pointer;
+}
+
+.profile-link{
+	padding: 5px;
+}
+
+
+.profile-image.my-profile-image img{
+	width: 30px;
+	height: 30px;
 }
 
 div.seperate-vertical{
@@ -238,9 +238,8 @@ li.icons-item:first-child{
 	width: 240px;
 	height: 26px;
 	font-size: 14px;
-	border: 2px solid #7f8c8d;
+	border: 2px solid #4285f4;
 	padding: 5px 10px;
-	color: #7f8c8d;
 	border-radius: 3px;
 }
 
@@ -254,8 +253,8 @@ input:-moz-placeholder {
 }
 
 input:focus {
-  box-shadow: 0 0 5px #7f8c8d;
-  border: 2px solid #7f8c8d;
+  box-shadow: 0 0 5px #4285f4;
+  border: 2px solid #4285f4;
   outline: 0 none;
 }
 
@@ -268,7 +267,7 @@ input:focus {
 	width: 100%;
 	height: 120px;
 	position: relative;
-	border: 1px solid #7f8c8d;
+	border: 1px solid #4285f4;
 }
 
 .friend-profile-image{
@@ -312,7 +311,7 @@ li.icons-item-block{
 }
 
 .icon-text{
-	color: #7f8c8d;
+	color: #4285f4;
 	position: relative;
 	left: 27px;
 	top: -4px;
@@ -398,21 +397,38 @@ form .inp{
 	padding: 5px 15px;
 	display: inline-block;
 	text-align: center;
-	background-color: #ecf0f1;
+	background-color: #4285f4;
+	color: white;
+	transition: box-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+	transition-delay: 0.2s;
+	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
+
+.btn:hover{
+	color: #eee;
+	background-color: #0f9d58;
+}
+
+.btn:active,
+.btn:visited,
+.btn:focus{
+	color: #eee !important;
+	background-color: #4285f4 !important;
+}
+
+
 
 .notifications-block-wrapper{
 	overflow: hidden;
 	height: 100%;
 	border-top: 1px solid #bdc3c7;
 	position: relative;
-	overflow: hidden;
 }
 
 
 .notifications-block-wrapper h1{
 	width: 100%;
-	color: #7f8c8d;
+	color: #4285f4;
 	padding-left: 20px;
 	padding-top: 15px;
 	font-size: 20px;
@@ -435,14 +451,14 @@ form .inp{
 }
 
 .notification .glyphicon{
-	color: #7f8c8d;
+	color: #4285f4;
 	height: 16px;
 	width: 16px;
 	margin-right: 20px;
 }
 
 .hover-white:hover{
-	color: #ffffff;
+	color: #4285f4;
 }
 
 .hover-cursor{
@@ -450,7 +466,7 @@ form .inp{
 }
 
 .notification .notification-type{
-	color: #7f8c8d;
+	color: #4285f4;
 	font-size: 16px;
 }
 
@@ -468,7 +484,7 @@ form .inp{
 	position: absolute;
 	right: 20px;
 	top: 2px;
-	color: #7f8c8d;
+	color: #4285f4;
 }
 
 .notification{
@@ -492,8 +508,8 @@ form .inp{
 	display: flex;
 }
 
-.profile-page .profile-photo img{
-	border: 0 solid #7f8c8d;
+.profile-photo img{
+	border: 0 solid #4285f4;
 	border-radius: 3px;
 	cursor: pointer;
 	width: 240px;
@@ -543,7 +559,7 @@ form .inp{
 	min-width: 150px;
 }
 
-.profile-page textarea{
+textarea{
 	resize:none;
 	max-width: 240px;
 	width: 240px;
@@ -619,12 +635,12 @@ form .inp{
 }
 
 .liked{
-	color: #ffffff;
+	color: #428bca;
 }
 
 .photoUploader{
 	position: absolute;
-	left: -500px;
+	left: -1500px;
 }
 
 .add-post{
@@ -756,7 +772,7 @@ div.profile-block-div{
 
 .message-page{
 	overflow: hidden !important;
-	padding: 3em 10em;
+	padding: 3em 10em 0;
 }
 
 .message{
@@ -785,7 +801,7 @@ div.profile-block-div{
 	left: 36px;
 	width: 0;
 	height: 0;
-	border: 7px solid #7f8c8d;
+	border: 7px solid #4285f4;
 	border-left-color: transparent;
 	border-bottom-color: transparent;
 }
@@ -797,7 +813,7 @@ div.profile-block-div{
 	right: 36px;
 	width: 0;
 	height: 0;
-	border: 7px solid #7f8c8d;
+	border: 7px solid #4285f4;
 	border-right-color: transparent;
 	border-top-color: transparent;
 }
@@ -807,7 +823,7 @@ div.profile-block-div{
 	max-width: 15em;
 	min-width: 15em;
 	padding: 0.3em 1em;
-	background-color: #7f8c8d;
+	background-color: #4285f4;
 	word-wrap: break-word;
 }
 
@@ -836,13 +852,10 @@ div.profile-block-div{
 	background: url("/resources/css/images/left_bar_background.gif") repeat;
 }
 
-.message-page h1{
-	color: #ffffff;
-}
 
 .not_read .message-text{
 	background-color: #ffffff;
-	color:  #7f8c8d;
+	color:  #4285f4;
 }
 
 
@@ -868,7 +881,6 @@ div.profile-block-div{
 }
 
 .dialog-message-block{
-	color: #ffffff;
 	margin-left: 10px;
 	display: inline-block;
 }
@@ -876,10 +888,67 @@ div.profile-block-div{
 .dialog-wrap{
 	width: 100%;
 	padding-bottom: 15px;
-	border-bottom: 1px solid #7f8c8d;
+	border-bottom: 1px solid #4285f4;
 }
 
 .dialog-wrap{
 
 }
 
+
+.right-bar{
+	padding: 10px;
+}
+
+body{
+	background-color: #e5e5e5
+}
+
+
+.main-container{
+	padding-top: 60px;
+	background-color: #ffffff;
+	height: 100%;
+}
+
+.head{
+	font-size: 24px;
+}
+
+.row{
+	background: #ffffff;
+}
+
+.big-image{
+	width: 100px;
+	height: auto;
+}
+
+.margin-bottom{
+	padding-bottom: 10px;
+	margin-bottom: 20px;
+}
+
+.border-bottom{
+	border-bottom: 1px solid #4285f4;
+}
+
+.user-info-inp{
+	display: inline-block;
+}
+
+.main-photo{
+	max-width: 400px;
+}
+
+.inline{
+	display: inline-block;
+}
+
+.main-photo-wrapper{
+	min-height: 450px;
+}
+
+.inp.message-input{
+	width: 60% !important;
+}
